[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Menus/TitleScreen.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Buttons/QuitDefault.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/QuitPressed.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Buttons/PlayHover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/PlayDefault.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/PlayPressed.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Buttons/QuitHover.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Scenes/TitleScene.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Buttons/HitButtonDefault.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Buttons/HitButtonCorruptedPressed.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Buttons/HitButtonCorruptedHover.png" type="Texture" id=11]

[node name="TitleScene" type="Node2D"]
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PlayButton" type="TextureButton" parent="."]
margin_left = -282.463
margin_right = -32.463
margin_bottom = 100.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="TextureButton" parent="."]
margin_left = 46.728
margin_right = 296.728
margin_bottom = 100.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitCorrupt" type="TextureButton" parent="."]
visible = false
margin_left = 34.6687
margin_top = -208.013
margin_right = 84.6687
margin_bottom = -158.013
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="HitCorrupt" to="." method="_on_HitCorrupt_pressed"]
